--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="./images/contatos.png" alt="ícone adicionar contato">
+      <img src="./images/contatos.png" alt="agenda de contatos">
       <h1>Agenda</h1>
     </header>
     <form id="form-contato">
